# binary-generic

./: CONTRIBUTORS  LICENSE  binary-generic.cabal
src/Data/Binary/: Generic.hs
src/Data/Binary/Generic/: Extensions.hs
