name:            binary-generic
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          Lars Petersen <info@lars-petersen.net>
maintainer:      Lars Petersen <info@lars-petersen.net>
homepage:        http://github.com/lpeterse/binary-generic
description:     Instead of manually or semi-automated generating
                 instances of Binary you just derive Data and are done!
synopsis:        Generic serialisation of algebraic types using binary and syb.
category:        Data, Parsing
stability:       experimental
build-type:      Simple
cabal-version:   >= 1.2
tested-with:     GHC == 6.12.1
extra-source-files: README 

library
  build-depends:   base >= 3 && < 5,
                   binary, 
                   data-binary-ieee754,
                   bytestring,
                   syb,
                   text
  hs-source-dirs:  src
  exposed-modules: Data.Binary.Generic
  ghc-options:     -Wall

